--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Hello AngularJS</title>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="application/javascript" src="vendor/angular/angular.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
+    <script src="app.js"></script>
+    <script type="text/javascript" src="controller/LoginController.js"></script>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
@@ -9,16 +15,37 @@
       [ng\:cloak], [ng-cloak], .ng-cloak {
         display: none !important;
       }
+      body{
+        background-color: lightslategrey;
+      }
+      .page-header{
+        padding: 20px;
+        background-color: lightslategrey;
+        text-align: center;
+        color: #1d2124;
+      }
+      .page-content{
+        padding-top: 50px;
+
+      }
     </style>
+
+
+
   </head>
 
-  <body ng-app="hello" ng-cloak class="ng-cloak">
+  <body ng-app="myApp" ng-cloak class="ng-cloak">
+
+  <div class = "page-header">
+
+    <h1>
+      Ticketing System
+      <small>JP for President</small>
+    </h1>
+
+  </div>
 
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script type="application/javascript" src="vendor/angular/angular.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
-    <script src="js/hello.js"></script>
+  <div ng-view class="page-content"></div>
   </body>
 </html>
