Implement Datatable for Home View

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,20 +3,21 @@
   <head>
     <title>Hello AngularJS</title>
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/datatables/media/js/jquery.datatables.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/angular/angular.min.js"></script>
     <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="controller/LoginController.js"></script>
+    <script type="text/javascript" src="controller/HomeController.js"></script>
+    <script src="vendor/angular-datatables/dist/angular-datatables.min.js"></script>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/angular-datatables/dist/css/angular-datatables.min.css">
     <style type="text/css">
       [ng\:cloak], [ng-cloak], .ng-cloak {
         display: none !important;
-      }
-      body{
-        background-color: lightslategrey;
       }
       .page-header{
         padding: 20px;
@@ -39,8 +40,8 @@
   <div class = "page-header">
 
     <h1>
-      Ticketing System
-      <small>JP for President</small>
+      Issue Tracking System
+      <small></small>
     </h1>
 
   </div>
