--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,11 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/angular/angular.min.js"></script>
     <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="service/StorageService.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="controller/LoginController.js"></script>
     <script type="text/javascript" src="controller/HomeController.js"></script>
+    <script type="text/javascript" src="controller/TicketController.js"></script>
     <script src="vendor/angular-datatables/angular-datatables.min.js"></script>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
