--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello AngularJS</title>
+    <title>Issue Tracking System</title>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/datatables/media/js/jquery.datatables.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
