--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
     <script type="application/javascript" src="vendor/angular/angular.min.js"></script>
     <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="service/UserService.js"></script>
+    <script type="text/javascript" src="service/DefectService.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="controller/LoginController.js"></script>
     <script type="text/javascript" src="controller/HomeController.js"></script>
