--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,11 +9,13 @@
     <script type="text/javascript" src="vendor/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="service/UserService.js"></script>
     <script type="text/javascript" src="service/DefectService.js"></script>
+    <script type="text/javascript" src="service/DefectStatusService.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="controller/LoginController.js"></script>
     <script type="text/javascript" src="controller/HomeController.js"></script>
     <script type="text/javascript" src="controller/DefectDetailsController.js"></script>
     <script type="text/javascript" src="controller/DefectController.js"></script>
+    <script type="text/javascript" src="controller/DefectChangeController.js"></script>
     <script type="text/javascript" src="controller/RegistrationController.js"></script>
     <script src="vendor/angular-datatables/angular-datatables.min.js"></script>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
