Add import data for defect change and edit header text

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
   <div class = "page-header">
 
     <h1>
-      Issue Tracking System
+      Fehlerverwaltungssystem
       <small></small>
     </h1>
 
